** [ADD] Added `steffan-westcott.clj-otel.api.baggage/get-entry`
** For all `clj-otel` functions which create a span such as `with-span!`, optional entries in `:source` map have changed:
*** [BREAK] `:fn` should be the fully qualified function name
*** [MAINT] Support for `:ns` has been deprecated and removed
*** [ADD] `:col` is the source column number
* [ADD] Programmatic configuration of log record exporters used for debugging.
* [BREAK] Pedestal `0.7.0` in microservices examples.
Pedestal `0.7.0` introduces its own support for OpenTelemetry, including a new interceptor `io.pedestal.http.tracing/request-tracing-interceptor`.
This overlaps functionality with `clj-otel` interceptors, so should be disabled by setting `:io.pedestal.http/tracing` to `nil` in the Pedestal service map.
* [MAINT] Clojure `1.12.0` However `clj-otel` retains compatibility with Clojure `1.10.3` and later.

=== `0.2.7` (2024-07-01)

- Bump deps
* [MAINT] OpenTelemetry `1.39.0`
** [ADD] Support for creating and setting gauges that take measurements synchronously.
Use `steffan-westcott.clj-otel.api.metrics.instrument/set!` to synchronously set a gauge to a given measurement.
** [ADD] Option to set explicit bucket boundaries advice for histograms
** [ADD] `:links` option for `add-span-data!`
** [FIX] `metrics-by-route-interceptors` should record requests that have 404 HTTP response code
** [BREAK] Removed modules `clj-otel-exporter-jaeger-grpc` and `clj-otel-exporter-jaeger-thrift` as the Java libraries `opentelemetry-exporter-jaeger` and `opentelemetry-exporter-jaeger-thrift` are no longer published.
Jaeger has native support for OTLP, use `clj-otel-exporter-otlp` instead to configure an OTLP exporter.
** [BREAK] In module `clj-otel-exporter-zipkin`, `span-exporter` options `:sender` and `:encoder` now take `zipkin2.reporter.BytesMessageSender` and `zipkin2.codec.BytesEncoder` values
* [MAINT] Various build deps
- Refactored microservice examples
** [MAINT] Removed uberjar build step.